# Kessai

./: .gitignore  .release-it.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  SUPPORT.md  eslint.config.js  index.html  install.sh  package.json  playwright.web-smoke.config.ts  pnpm-lock.yaml  uninstall.sh  vite.config.ts
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  feature_request.md  feature_request.yml
.github/workflows/: ci.yml  release.yml
.swarm/reports/: baseline.json
crates/kessai-core/src/: migrations.rs
crates/subby-core/: Cargo.toml
crates/subby-core/src/: db.rs  error.rs  lib.rs  migrations.rs
crates/subby-core/src/models/: category.rs  mod.rs  payment.rs  payment_card.rs  price_history.rs  settings.rs  stats.rs  subscription.rs  tag.rs
crates/subby-core/src/services/: analytics.rs  category.rs  data_management.rs  mod.rs  payment.rs  payment_card.rs  price_history.rs  settings.rs  subscription.rs  tag.rs
crates/subby-core/src/utils/: date.rs
crates/subby-mcp/: Cargo.toml
crates/subby-mcp/src/: cli.rs  main.rs  mcp.rs
crates/subby-web/: Cargo.toml
crates/subby-web/src/: main.rs  routes.rs
docs/: BACKLOG.md  README.md  _meta.md  architecture.md  backend-api.md  competitive-analysis.md  index.md  troubleshooting.md
docs/architecture/: database-schema.md  overview.md  security.md  state-management.md
docs/explanation/: architecture.md  concepts.md  design-decisions.md  security-and-privacy.md
docs/getting-started/: building-from-source.md  installation.md  quick-start.md
docs/guides/: adding-migrations.md  backup-format.md  release-process.md  testing.md
docs/how-to/: add-a-migration.md  build-and-release.md  configure.md  install.md  run-locally.md  test.md  troubleshoot.md  use-mcp-server.md
docs/plans/: 2026-02-14-asf-migration-runbook.md  2026-02-14-docs-publish-asf-execution.md  2026-02-14-docs-publish-gap-register.md  2026-02-14-publish-readiness-report.md  feature-backlog.md
docs/reference/: backup-format.md  commands-and-scripts.md  commands-cheatsheet.md  configuration.md  desktop-commands.md  environment-variables.md  filesystem.md  mcp-cli.md  overview.md  tauri-commands.md  web-api.md
docs/tutorials/: first-run.md  payment-tracking-and-backups.md
e2e/: cancellation.spec.ts  fixtures.ts  navigation.spec.ts  pin-subscriptions.spec.ts  settings.spec.ts  subscriptions.spec.ts  web-smoke.spec.ts
scripts/: extract-release-notes.js  kessai  test-installer.sh
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json  tauri.dev.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src/components/: error-boundary.tsx  route-error-boundary.tsx
src/components/analytics/: monthly-spending-chart.tsx
src/components/calendar/: calendar-day-panel.tsx  calendar-day.tsx  month-summary-header.tsx  payment-indicator.tsx  subscription-card.tsx
src/components/categories/: category-dialog.tsx  category-form.tsx  category-manager.tsx  icon-picker.tsx
src/components/command-palette/: command-palette.tsx
src/components/dashboard/: budget-widget.tsx  category-breakdown.tsx  dashboard-skeleton.tsx  insights-card.tsx  monthly-trend-chart.tsx  price-changes-card.tsx  review-nudge-card.tsx  spending-trends.tsx  stat-card.tsx  (+5 more)
src/data/: subscription-templates.ts
src/hooks/: use-analytics.ts  use-calendar-stats.ts  use-command-palette.ts  use-currency-conversion.ts  use-dashboard-stats.ts  use-keyboard-shortcuts.ts  use-logo-fetch.ts  use-motion-settings.ts  use-notification-scheduler.ts  use-payments.ts  use-settings.ts  use-subscriptions.ts  use-tray-badge.ts
src/lib/: api.ts  csv-import.ts  data-management.ts  date-utils.ts  exchange-rates.ts  import-parsers.ts  logger.ts  logo-fetch.ts  logo-storage.ts  notifications.ts  runtime.ts
src/pages/: analytics.tsx  calendar.tsx  dashboard.tsx  settings.tsx  subscriptions.tsx
src/stores/: category-store.ts  payment-card-store.ts  payment-store.ts  price-history-store.ts  settings-store.ts  subscription-store.ts  tag-store.ts  ui-store.ts  update-store.ts
src/styles/: globals.css
src/types/: payment-card.ts  payment.ts  settings.ts  subscription.ts  tag.ts
stitch-designs/: README.md
stitch-designs/prompts/: 01-app-shell.md  02-dashboard.md  03-subscriptions.md  04-subscription-form.md  05-calendar.md  06-settings.md  07-components.md
(+84 files in other folders)
