[package]
name = "subby"
version = "0.1.0"
description = "Know where your money flows - Personal subscription tracker"
authors = ["ASF", "Andrés (NewStella)"]
license = "MIT"
edition = "2021"

[lib]
name = "subby_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-notification = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
image = "0.25"
uuid = { version = "1", features = ["v4"] }
