[package]
name = "subby-core"
version = "0.1.0"
edition = "2021"
description = "Core business logic library for Subby subscription tracker"

[dependencies]
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
thiserror = "2"
r2d2 = "0.8"
r2d2_sqlite = "0.25"

[dev-dependencies]
tempfile = "3"
