[package]
name = "subby-web"
version = "0.2.0"
edition = "2021"
description = "Web server for Subby - serves the UI and REST API"

[[bin]]
name = "subby-web"
path = "src/main.rs"

[dependencies]
subby-core = { path = "../subby-core" }
axum = { version = "0.8", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.6", features = ["cors", "fs", "trace"] }
anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }
dirs = "6"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
